--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/HyunnoH/elvansoda#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "diff": "^4.0.1",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-mysql-session": "^2.1.0",
