--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/HyunnoH/elvansoda#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "comment-json": "^2.2.0",
     "diff": "^4.0.1",
     "eslint-plugin-import": "^2.18.2",
     "express": "^4.17.1",
